crates/uitest/fixtures/name_resolution/conflict_generics.snap
---
source: crates/uitest/src/lib.rs
expression: diags
input_file: crates/uitest/fixtures/name_resolution/conflict_generics.fe
---
error[2-0001]: `T` conflicts with other definitions
  ┌─ conflict_generics.fe:1:16
  │
1 │ pub struct MyS<T, U, T> {
  │                ^     - `T` is redefined here
  │                │      
  │                `T` is defined here


